compiler/lume_typech/src/tests/check/snapshots/lume_typech__tests__check__generic__typech_generic_function_call_returned_type_incomp.snap
---
source: compiler/lume_typech/src/tests/check/generic.rs
description: "fn foo<T>(val: T) -> T {\n            return val;\n        }\n\n        fn bar() {\n            let _: Int32 = foo<Boolean>(false);\n        }"
---
× error[LM4001]: mismatched types
   ╭───────────
 5 │         fn bar() {
 6 │             let _: Int32 = foo<Boolean>(false);
   │                            ^^^^^^^^^^^^^^^^^^^^ expected type Int32, but found type Boolean...
 7 │         }
   ∶ 
 5 │         fn bar() {
 6 │             let _: Int32 = foo<Boolean>(false);
   │                    ^^^^^ ...because of type defined here
 7 │         }
   ╰──
   help: expected type Int32
            found type Boolean
